Update bitmessage