@@ -17,5 +17,5 @@ compileJava {
 application {
     mainModule = 'com.twitter.teruteru.preview'
     mainClass = 'com.twitter.teruteru128.preview.Main'
-    applicationDefaultJvmArgs = ['--enable-preview', '-Xms64G', '-Xmx64G']
+    applicationDefaultJvmArgs = ['--enable-preview', '--enable-native-access=com.twitter.teruteru.preview', '-Xms64G', '-Xmx64G']
 }
